# MoneyRobot

./: .gitignore  .pylintrc  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  manage.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: cd.yml
MoneyRobot/: .env  asgi.py  categories.py  models.py  settings.py  urls.py  views.py  wsgi.py
MoneyRobot/api/: models.py  requirements.txt  schemas.py
MoneyRobot/database_setup/: InsertTestData.py  ShowTables.py  create_tables.sql
MoneyRobot/templates/: index.html
MoneyRobot/terraform/EC2/: main.tf
MoneyRobot/terraform/IAM/: main.tf
MoneyRobot/terraform/SG/: main.tf
MoneyRobot/terraform/VPC/: main.tf
api/: .bashrc  crud.py  database.py  db_info.py  dockerfile  main.py  models.py  schemas.py
database/: CreateTables.py  DatabaseConnection.py  DropTables.py  InsertTestData.py  README.md  ShowTables.py  create_db.sql  create_tables.sql  dockerfile  sample_data.xlsx  sample_transactions.xlsx  test_data.sql
database_setup/: DatabaseConnection.py  DropTables.py
documentation/: Attributes of Workload Hosting Environment Types.xlsx  moneyrobotsimplediagram.drawio
terraform/EC2/: bastion-dev-key.pem  main.tf
terraform/IAM/: main.tf
terraform/Lambda/: main.tf
terraform/RDS/: main.tf
terraform/S3/: main.tf
terraform/SG/: main.tf
terraform/SecretsManager/: main.tf  terraform.tfstate.backup
