[tool.poetry]
name = "moneyrobot"
version = "0.1.0"
description = "Repository containing all the source code for MoneyRobot."
authors = ["Michael Dreisinger <mike.dreisinger95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymysql = "^1.0.2"
aws-secretsmanager-caching = "^1.1.1.5"
botocore = "^1.29.94"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
