[tool.poetry]
name = "moneyrobot"
version = "0.1.0"
description = "Repository containing all the source code for MoneyRobot."
authors = ["Michael Dreisinger <mike.dreisinger95@gmail.com>"]
readme = "README.md"
packages = [{include = "database"}]

[tool.poetry.dependencies]
python = "^3.9"
pymysql = "^1.0.2"
aws-secretsmanager-caching = "^1.1.1.5"
botocore = "^1.29.94"
click = "^8.1.3"
pylint = "^2.17.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create_tables = "database.CreateTables:create_tables"
drop_tables = "database.DropTables:drop_tables"
insert_test_data = "database.InsertTestData:insert_test_data"
