[tool.poetry]
name = "moneyrobot"
version = "0.1.0"
description = "Repository containing all the source code for MoneyRobot."
authors = ["Michael Dreisinger <mike.dreisinger95@gmail.com>"]
readme = "README.md"
packages = [{include = "database"}]

[tool.poetry.dependencies]
python = "^3.9"
pymysql = "^1.0.2"
aws-secretsmanager-caching = "^1.1.1.5"
botocore = "^1.29.94"
click = "^8.1.3"
tabulate = "^0.9.0"
openpyxl = "^3.1.2"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.7"
mysqlclient = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create_tables = "database.CreateTables:create_tables"
drop_tables = "database.DropTables:drop_tables"
insert_test_data = "database.InsertTestData:insert_test_data"
show_tables = "database.ShowTables:show_tables"
