[metadata]
name = MoneyRobot
version = 0.0.1
author = Michael Dreisinger
author_email = mike.dreisinger95@gmail.com
description = Command line tool for creating tables and test data in the moneyrobot database.
classifiers =
    Programming Language :: Python :: 3

[options]
packages = database

[options.entry_points]
console_scripts =
    create_tables = database.CreateTables:create_tables
    insert_test_data = database.InsertTestData:insert_test_data

[options.packages.find]
exclude =
    README.md